# idyicyanere

./: .gitignore  Makefile  README.md  example.env  idyicyanere  parse_context.sh
examples/: book.tex  main.tex  prompt.txt
examples/context/: context_1.txt  context_2.txt
examples/folder/: file.txt
idyicyanere-terminal-(experimental)/: README.md  idyicyanere
idyicyanere-terminal-(experimental)/examples/: book.tex
idyicyanere-terminal-(experimental)/examples/context/: context_1.txt  context_2.txt  context_3.txt  context_5.txt  context_6.txt
idyicyanere-terminal-(experimental)/include/: db.h  editor.h  idy.h  log.h  preview.h  requests.h  settings.h  stream.h
idyicyanere-terminal-(experimental)/src/: buffer.c  db.c  fsutil.c  main.c  requests.c  stream.c  tui_context.c  tui_editor.c  tui_logs.c  util.c
idyicyanere-vscode/: .vscodeignore  README.md  package.json  release-vsix.yml  setup-linux.sh  tsconfig.json  win-setup.ps1
idyicyanere-vscode/dist-vsix/: idyicyanere-linux-x64.vsix  idyicyanere-win32-x64.vsix
idyicyanere-vscode/native/idydb-addon/idydb/: CMakeLists.txt
idyicyanere-vscode/native/idydb-addon/idydb/impl/: db.cpp
idyicyanere-vscode/native/idydb-addon/idydb/include/: db.h
idyicyanere-vscode/src/: extension.ts  test_file_01.txt  test_file_02.txt
include/: clipboard.h  diff.h  file_context.h  fsutil.h  idy.h  preview.h  sha256.h  stream.h  tui.h
src/: clipboard.c  diff_apply.c  editor.c  env.c  file_context.c  log.c  main.c  mcp.c  preview.c  settings.c  sha256.c  stream.c  tui.c  tui_editor.c  tui_logs.c  tui_settings.c  util.c
(+101 files in other folders)
